--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
     "private": true,
     "sideEffects": false,
     "scripts": {
-        "build": "npm run build:css && remix build",
-        "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-        "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-        "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-        "start": "remix-serve build"
+        "dev": "remix dev",
+        "build": "remix build",
+        "serve": "remix-serve build"
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.1.2",
+        "@emotion/cache": "^11.7.1",
+        "@emotion/react": "^11.9.0",
+        "@emotion/server": "^11.4.0",
+        "@emotion/styled": "^11.8.1",
         "@prisma/client": "^3.14.0",
         "@remix-run/express": "^1.5.1",
         "@remix-run/node": "^1.5.1",
         "@remix-run/react": "^1.5.1",
         "@remix-run/serve": "1.5.1",
         "bcryptjs": "^2.4.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "framer-motion": "^6.3.10",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0"
     },
     "devDependencies": {
         "@remix-run/dev": "^1.5.1",
         "@remix-run/eslint-config": "^1.5.1",
         "@types/react": "^17.0.45",
         "@types/react-dom": "^17.0.17",
-        "autoprefixer": "^10.4.7",
-        "concurrently": "^7.2.1",
         "eslint": "^8.15.0",
-        "postcss": "^8.4.14",
         "prettier": "2.6.2",
         "prisma": "^3.14.0",
-        "tailwindcss": "^3.0.24",
         "typescript": "^4.6.4"
     },
     "engines": {
