--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "bcryptjs": "^2.4.3",
         "framer-motion": "^6.3.10",
         "react": "^18.1.0",
-        "react-dom": "^18.1.0"
+        "react-dom": "^18.1.0",
+        "react-icons": "^4.4.0"
     },
     "devDependencies": {
         "@remix-run/dev": "^1.5.1",
